syntax = "proto3";

package yandex.cloud.priv;

import "google/protobuf/descriptor.proto";

// See ydb/public/api/client/yc_private/example/v1alpha/validation_example.proto for usage examples.
option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private;cloud";

extend google.protobuf.OneofOptions {
  bool exactly_one = 100400;
}

extend google.protobuf.FieldOptions {
  bool required = 100501;
  string pattern = 100502;
  string value = 100503;
  string size = 100504;
  string length = 100505;
  bool unique = 100506;
  MapKeySpec map_key = 100510;
  string bytes = 100511;
}

message MapKeySpec {
  string value = 1;
  string pattern = 2;
  string length = 3;
}
